# fk_df

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
cmake/: FindGFTools.cmake  UseDoxygen.cmake
prog/: CMakeLists.txt  DMFTCubicSuscPath.cpp  FKOptionParserDF.h  FKOptionParserDMFT.h  FK_DF.cpp  OptionParser.h  README.md  fk_DF.cpp  fk_DMFT.cpp  fk_DMFT_bethe.cpp  fk_DMFT_cubic.cpp  fk_DMFT_cubicinf.cpp  statistics.hpp
src/: CMakeLists.txt  Container.h  Container.hpp  DF.cpp  DF.h  DF.hpp  DFDiagrams.h  DFDiagrams.hpp  DMFT.cpp  DMFT.h  DMFT.hpp  Diagrams.h  Diagrams.hpp  EigenIterator.h  FFT.hpp  FK.h  FKCommon.h  GFWrap.cpp  GFWrap.h  Grid.h  Grid.hpp  GridObject.h  GridObject.hpp  LatticeTraits.hpp  SelfConsistency.cpp  SelfConsistency.h  SelfConsistency.hpp  Solver.cpp  Solver.h  fk_common.h  gf_wrap.cpp  gf_wrap.h  grid.hpp
tests/: CMakeLists.txt  ContainerTest.cpp  CubicDMFTTest.cpp  DFCubicTest01.cpp  DMFTBetheTest.cpp  DMFTCubicSuscTest.cpp  DMFTCubicSuscTest02.cpp  DMFTCubicTest.cpp  DMFTCubicTest01.cpp  DMFTCubicTest02.cpp  DMFTTriangularTest01.cpp  DMFT_DFCubicTest01.cpp  DMFT_DFCubicTest02.cpp  DMFT_DFCubicTest03.cpp  DMFT_DFCubicTest04.cpp  DiagramsTest.cpp  FFTTest.cpp  GridObjectTest.cpp  GridTest.cpp  ShiftTest.cpp  SolverTest.cpp
